import { db } from '../../db/index.js';

export type AppDb = typeof db;
